# plate-sampler

./: .dockerignore  .gitignore  Dockerfile  README.md  pixi.toml  pyproject.toml
.github/workflows/: docker-image.yml
plate_sampler/: __init__.py  czi_sampler.py  mx_sampler.py
